project/styles/index.css
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --primary-color: #4b4d39;
  --secondary-color: #4c583e;
  --accent1-color: #2c3424;
  --accent2-color: #daded8;
  --accent3-color: #768064;
  --rich-black: #010b13;

  font-family: Outfit, Raleway, sans-serif;
  background-color: var(--accent-color3);
  font-size: 16px;

  --heading-font: "Raleway", serif;
  --text-font: "Inter", serif;
  --text-color: #000;
}

h1,
h2,
h3,
h4 {
  font-family: Raleway, Outfit, sans-serif;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

.logo-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}

.logo-container img {
  width: 90px;
  height: 80px;
}

#icon-menu::before {
  font-family: "Font Awesome 5 Free";
  content: "\f0c9";
  font-weight: 600;
  font-size: 25px;
  cursor: pointer;
}

#icon-menu.open::before {
  content: "\f00d";
}

.nav-container .nav-links {
  background-color: var(--secondary-color);
  color: white;
  text-align: center;
}

.nav-container nav {
  display: grid;
  grid-template-rows: 0fr;
  transition: grid-template-rows 0.5s ease-out;
}

.nav-container nav ul {
  overflow: hidden;
}

.nav-container nav.open {
  grid-template-rows: 1fr;
}

.nav-links li {
  padding: 10px 0;
}

.nav-links li:nth-of-type(1) {
  padding-top: 25px;
}

.nav-links li:nth-of-type(3) {
  padding-bottom: 25px;
}

.nav-links a {
  color: white;
  font-family: Raleway, Outfit, sans-serif;
  font-weight: 600;
  padding: 5px 14px;
  border-radius: 15px;
}

.nav-links a:hover {
  color: var(--primary-color);
}

.active {
  text-decoration: underline 3px var(--primary-color);
}

.pic-src {
  width: 100%;
  height: 500px;
  position: relative;
}

.pic-src img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.hero-msg {
  position: absolute;
  bottom: 0;
  left: 0;
  top: 30%;
  color: white;
  padding: 20px;
}

.hero-msg h1 {
  font-size: 1.5rem;
}

.hero-msg a {
  padding: 9px 17px;
  border-radius: 5px;
  background-color: var(--primary-color);
  color: white;
  border: none;
}

.all-events {
  margin-top: 30px;
  padding: 20px;
}

.all-events h2 {
  padding-bottom: 20px;
}

.more-events {
  padding: 10px 15px;
  border-radius: 5px;
  background-color: var(--primary-color);
  border: none;
  margin-top: 10px;
  margin-left: 10px;
  cursor: pointer;
}

.more-events a {
  color: white;
}

.new-btn {
  padding: 10px 15px;
  border-radius: 5px;
  background-color: var(--primary-color);
  border: none;
  cursor: pointer;
  text-decoration: none;
  color: white;
  width: 150px;
}

.toEvent {
  display: block;
  margin-top: 40px;
}

.event-container {
  display: flex;
  flex-direction: column;
  gap: 13px;
}

.each-event {
  width: 100%;
  height: 340px;
  cursor: pointer;
}

.each-event div {
  width: auto;
  height: 220px;
}

.each-event img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.each-event ul {
  padding: 14px;
  line-height: 1.3;
  background-color: var(--accent-color1);
}

.grtContainer {
  width: 100%;
  padding: 15px;
  color: #fff;
  background-color: var(--accent1-color);
  border: none;
  font-weight: bold;
  text-align: center;
}

.grtContainer.show {
  display: grid;
  grid-template-rows: 1fr;
  transition: grid-template-rows 2s ease-out;
}

.grtContainer.hide {
  margin-top: -55px;
  transition: 2s ease;
  opacity: 0;
}

footer {
  margin-top: 100px;
  background-color: var(--secondary-color);
  color: #fff;
}


.footer-background {
  padding: 20px;
}

.footer-section {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.sec-one li,
.sec-two li,
.sec-three li {
  padding: 1.3px 0;
}

.sec-one li:nth-of-type(1),
.sec-two li:nth-of-type(1),
.sec-three li:nth-of-type(1) {
  font-weight: bold;
  font-family: monospace;
}

.sec-one a,
.sec-two a {
  color: white;
  text-decoration: underline 2px;
}

.footend-section {
  margin-top: 50px;
}

.footend-section hr {
  margin: 12px 0;
  border: 1px solid #fff;
}

.footend-section ul {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

@media screen and (min-width: 1000px) {
  .all-events,
  .footer-background,
  .nav-container {
    max-width: 1200px;
    margin: 0 auto;
  }

  .all-events {
    margin-top: 50px;
  }

  .pic-src {
    height: 650px;
  }

  .hero-msg h1 {
    font-size: 2rem;
  }

  .hero-msg > button a {
    color: white;
  }

  .toEvent {
    margin-right: auto;
    display: flex;
    justify-content: flex-end;
    margin-top: 50px;
  }

  .event-container {
    padding: 0;
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
  }

  #icon-menu {
    display: none;
  }

  .nav-container {
    display: grid;
    grid: auto/1fr 1fr;
  }

  .nav-container .nav-links {
    display: flex;
    background-color: transparent;
  }

  .nav-container .nav-links ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    gap: 50px;
  }

  .nav-links a {
    background-color: transparent;
    color: var(--rich-black);
    font-weight: 600;
  }

  .nav-container .nav-links ul li {
    padding: 0;
  }

  .hero-msg h1 {
    font-size: 2rem;
  }

  footer {
    height: 350px;
  }

  .footer-background {
    margin-top: 50px;
    padding: 20px 0;
  }

  .footer-section {
    flex-direction: row;
    margin-top: 60px;
    gap: 360px;
  }

  .footend-section {
    margin-top: 100px;
  }

  .footend-section ul {
    flex-direction: row;
    justify-content: space-between;
  }
}

